tests/baselines/reference/FunctionDeclaration3_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration3_es6.ts(1,20): error TS2372: Parameter 'yield' cannot reference itself.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration3_es6.ts (1 errors) ====
    function f(yield = yield) {
                       ~~~~~
!!! error TS2372: Parameter 'yield' cannot reference itself.
    }